Cleaned up agric data some more

--- a/wazimap_ke/templates/profile/profile_detail.html
+++ b/wazimap_ke/templates/profile/profile_detail.html
@@ -453,8 +453,11 @@
             </div>
         </section>
         <section class="clearfix stat-row">
-            <div class="column-full">
-                <div id="chart-histogram-crop_production-prod_dist" data-stat-type="number" data-chart-title="Crop production (bags or tons)"></div>
+            <div class="column-half">
+                <div id="chart-histogram-crop_production-prod_dist_k" data-stat-type="number" data-chart-title="Crop production (90kg bags)"></div>
+            </div>
+            <div class="column-half">
+                <div id="chart-histogram-crop_production-prod_dist_t" data-stat-type="number" data-chart-title="Crop production (tons)"></div>
             </div>
         </section>
         <section class="clearfix stat-row">
