--- a/hurumap_tz/templates/profile/profile_detail.html
+++ b/hurumap_tz/templates/profile/profile_detail.html
@@ -16,7 +16,7 @@
         <section class="clearfix stat-row">
             <h2 class="header-for-columns"><a class="permalink" href="#pop_count" id="pop_count">Population <i class="fa fa-link"></i></a></h2>
             <div class="column-quarter">
-                {% include 'profile/_blocks/_stat_list.html' with stat=demographics.total_population stat_type='number' %}
+                {% include 'profile/_blocks/_stat_list.html' with stat=demographics.total_population stat_type='number'  %}
             </div>
             <div class="column-quarter" id="chart-pie-demographics-sex_ratio" data-stat-type="percentage" data-chart-title="Sex" data-initial-sort="-value"></div>
             <div class="column-quarter">
@@ -42,7 +42,7 @@
         <h1>Literacy & numeracy tests</h1>
     </header>
     <div class="section-container">
-         <p class="source">Source: <a href="#">Uwezo Annual Assessment Report 2015</a></p>
+         <p class="source">Source: <a href="{{ literacy_and_numeracy_tests.source_link}}">{{ literacy_and_numeracy_tests.source_name }}</a></p>
          <br clear="all">
          <section class="clearfix stat-row">
             <div class="column-third">
@@ -51,9 +51,9 @@
          </section>
 
          <section class="clearfix stat-row">
-            <div class="column-third"  id="chart-pie-literacy_and_numeracy_tests-english_test_dist" data-stat-type="percentage" data-initial-sort="-value" data-chart-title="Percentage of children passing English literacy tests" data-initial-sort="{{literacy.english_sort}}"></div>
-            <div class="column-third"  id="chart-pie-literacy_and_numeracy_tests-swahili_test_dist" data-stat-type="percentage" data-initial-sort="-value" data-chart-title="Percentage of children passing Swahili literacy tests" data-initial-sort="{{literacy.swahili_sort}}"></div>
-            <div class="column-third"  id="chart-pie-literacy_and_numeracy_tests-numeracy_test_dist" data-stat-type="percentage" data-initial-sort="-value" data-chart-title="Percentage of children passing Numeracy tests" data-initial-sort="{{literacy.numeracy_sort}}"></div>
+            <div class="column-third"  id="chart-pie-literacy_and_numeracy_tests-english_test_dist" data-stat-type="percentage" data-initial-sort="-value" data-chart-title="Percentage of children aged 6-16 passing English literacy tests" data-initial-sort="{{literacy.english_sort}}"></div>
+            <div class="column-third"  id="chart-pie-literacy_and_numeracy_tests-swahili_test_dist" data-stat-type="percentage" data-initial-sort="-value" data-chart-title="Percentage of children aged 6-16 passing Swahili literacy tests" data-initial-sort="{{literacy.swahili_sort}}"></div>
+            <div class="column-third"  id="chart-pie-literacy_and_numeracy_tests-numeracy_test_dist" data-stat-type="percentage" data-initial-sort="-value" data-chart-title="Percentage of children aged 6-16 passing Numeracy tests" data-initial-sort="{{literacy.numeracy_sort}}"></div>
         </section>
 
     </div>
@@ -181,7 +181,7 @@
                  <div id="chart-histogram-causes_of_death-causes_of_death_under_five_data" data-stat-type="scaled-percentage" data-chart-title="Causes of death among persons under five years of age (2013)"></div>
              </div>
              <div class="column-full">
-                <div id="chart-histogram-causes_of_death-causes_of_death_over_five_data" data-stat-type="scaled-percentage" data-chart-title="Causes of death among persons over years of age (2013)"></div>
+                <div id="chart-histogram-causes_of_death-causes_of_death_over_five_data" data-stat-type="scaled-percentage" data-chart-title="Causes of death among persons over five years of age (2013)"></div>
              </div>
              <br clear="all">
              <p class="source">Source: <a href="{{causes_of_death.source_link_2}}">{{causes_of_death.source_name}}</a></p>
@@ -233,13 +233,13 @@
     </header>
     <div class="section-container">
          <section class="clearfix stat-row">
-             <p class="source">Source: <a href="{{health_workers_distribution.source_link}}">{{health_workers.source_name}}</a></p>
+             <p class="source">Source: <a href="{{health_workers_distribution.source_link}}">{{health_workers_distribution.source_name}}</a></p>
              <br clear="all">
              <div class="column-third">
                 {% include 'profile/_blocks/_stat_list.html' with stat=health_workers_distribution.hrh_patient_ratio stat_type='number' %}
               </div>
              <div class="column-full">
-                 <div id="chart-histogram-health_workers_distribution-health_worker_data" data-stat-type="scaled-percentage" data-chart-title="Number of health workers by region"></div>
+                 <div id="chart-histogram-health_workers_distribution-health_worker_data" data-stat-type="scaled-percentage" data-chart-title="Number of health workers by profession(2014)"></div>
             </div>
         </section>
     </div>
@@ -327,5 +327,4 @@
         </section>
     </div>
 </article>
-
 {% endblock %}
