Update homepage story showcase

--- a/hurumap_tz/templates/homepage.html
+++ b/hurumap_tz/templates/homepage.html
@@ -87,25 +87,25 @@
         </header>
         <section>
             <div class="column-third callout with-icon">
-                <img src="{% static 'img/donkeys.jpg' %}"/>
-                <h2>Marakwet locals intercept lorry ferrying 30 donkeys as demand for meat rises</h2>
-                <p>By Stephen Rutto</p>
-                <p>Marakwet East locals intercepted a lorry transporting 30 donkeys in Chesoi, on suspicion that the animals had been stolen from from other areas.</p>
-                <center><a href='http://www.the-star.co.ke/news/2016/11/04/marakwet-locals-intercept-lorry-ferrying-30-donkeys-as-demand-for-meat_c1449795'><button>Read more</button></a></center>
+                <img src="{% static 'img/uwezo.png' %}"/>
+                <h2>Umbumbumbu wa Hesabu, Kiingereza unavyotishia mustakabali wa elimu Tanzania</h2>
+                <p>By Nuzulack Dausen</p>
+                <p>Msingi dhaifu wa masomo ya Hisabati na Kiingereza unazidi kudhoofisha elimu ya msingi nchini, jambo linalotishia mustakabali wa kuzalisha wataalamu bora watakaochochea maendeleo..</p>
+                <center><a href='https://data.mwananchi.co.tz/umbumbumbu-wa-hesabu-kiingereza-unavyotishia-mustakabali-wa-elimu-tanzania/'><button>Read more</button></a></center>
             </div>
             <div class="column-third callout with-icon">
-                <img src="{% static 'img/crime.jpg' %}"/>
-                <h2>Two suspected thugs shot dead in Nairobi as crime rate soars</h2>
-                 <p>By Nancy Agutu</p>
-                <p>Two suspected thugs were shot dead in two separate incidents on Tuesday evening, and three guns with more than 30 bullets recovered</p>
-                <center><a href="http://www.the-star.co.ke/news/2016/10/19/two-suspected-thugs-shot-dead-in-nairobi-as-crime-rate-soars_c1440749"><button>Read more</button></a></center>
+                <img src="{% static 'img/kipato.png' %}"/>
+                <h2>Hii ndiyo siri ya utofauti wa kipato kati ya wanaume na wanawake Tanzania</h2>
+                 <p>By Nuzulack Dausen</p>
+                <p>Dar es Salaam. Licha ya kipato cha mfanyakazi kwa mwezi kuongezeka nchini bado kuna mwanya mkubwa wa kimapato kijinsia baada ya wanaume kuingiza fedha nyingi zaidi kuliko wanawake.</p>
+                <center><a href="https://data.mwananchi.co.tz/hii-ndiyo-siri-ya-utofauti-wa-kipato-kati-ya-wanaume-na-wanawake-tanzania/"><button>Read more</button></a></center>
             </div>
             <div class="column-third callout with-icon">
-                <img src="{% static 'img/pregnancy.jpg' %}"/>
-                <h2>Narok, Homa Bay and West Pokot top in early pregnancy</h2>
-                <p>By Monicah Mwangi</p>
-                <p>About one in every five teenage girls between 15-19 years have either had a live birth or are pregnant with their first child, according to a report by the United Nations Population Fund.</p>
-                <center><a href="http://www.the-star.co.ke/news/2016/11/02/narok-homa-bay-and-west-pokot-top-in-early-pregnancy_c1447958"><button>Read more</button></a></center>
+                <img src="{% static 'img/IPPMedia.png' %}"/>
+                <h2>CTI calls streamlined taxation food processing sector</h2>
+                <p>By IPP Media</p>
+                <p>A recent Confederation of Tanzania Industries (CTI) position paper on regulatory authorities shows that although the manufacturing sector generates tax revenues to the tune of 248 billion/- per year</p>
+                <center><a href="http://ippmedia.com/en/news/cti-calls-streamlined-taxation-food-processing-sector"><button>Read more</button></a></center>
             </div>
         </section>
     </article>
