Customize footer links.

--- a/hurumap/templates/_footer.html
+++ b/hurumap/templates/_footer.html
@@ -3,12 +3,12 @@
 <div class="column-half">
     <p class="smaller"><strong>HURUmap</strong> gives infomediaries like journalists and civic activists an easy ‘plug & play’ toolkit for finding and embedding interactive data visualisations into their storytelling.</p>
     <p class="small">
-                The project is built on <a href="http://wazimap.readthedocs.org/">Wazimap</a>, an open source platform by <a href="https://openup.org.za/">OpenUp</a> and <a href="http://www.mediamonitoringafrica.org/">Media Monitoring Africa</a> for making census data more understandable.</p>
+                The project is built on <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener">Wazimap</a>, an open source platform by <a href="https://openup.org.za/" target="_blank" rel="noopener">OpenUp</a> and <a href="http://www.mediamonitoringafrica.org/" target="_blank" rel="noopener">Media Monitoring Africa</a> for making census data more understandable.</p>
     <p class="small">This site is a project of <strong><a
             href="https://codeforafrica.org" target="_blank">Code for Africa</a></strong>. All content is released under a
         <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Reuse it to help empower your own community. The code is available on
-        <a href="https://github.com/CodeForAfrica/HURUmap" target="_blank">GitHub</a> and data is available on <a
-                href="https://openafrica.net" target="_blank">​openAFRICA​</a>.</p>
+        <a href="{{ HURUMAP.github_url }}" target="_blank">GitHub</a> and data is available on <a
+                href="{{ HURUMAP.openafrica_url }}" target="_blank">​openAFRICA​</a>.</p>
 </div>
 <div class="column-quarter">
     <p>Other HURUmap Projects:</p>
