Map is better designed.

--- a/hurumap/templates/blocks/partners.html
+++ b/hurumap/templates/blocks/partners.html
@@ -1,4 +1,4 @@
-<div class="showcase clearfix partners {{ extra_class }}">
+<div class="showcase clearfix partners {{ extra_css_class }}">
     <div class="wrapper centered">
         <h2>Partners</h2>
         <p>HURUmap is made possible through support from the following partners:</p>
