--- a/hurumap/static/css/hurumap.scss
+++ b/hurumap/static/css/hurumap.scss
@@ -75,6 +75,10 @@ input {
   text-align: left;
 }
 
+.text-center {
+  text-align: center;
+}
+
 
 // BODY
 
@@ -286,5 +290,31 @@ body {
     .select2-highlighted {
       background-color: $bottle_green;
     }
+  }
+}
+
+
+// COUNTRY EDITS
+
+#slippy-map {
+  display: block;
+  width: 100%;
+  height: 35em;
+  position: relative;
+}
+
+.leaflet-label {
+  color: #fff !important;
+  background-color: $ocean_green !important;
+  border-color: $ocean_green !important;
+  border-radius: 0 !important;
+  font-weight: 200 !important;
+  font-family: $font-poppins !important;
+  padding: 3px 6px 1px !important;
+}
+
+.how-it-works {
+  img {
+    max-width: 70px;
   }
 }
