Better nav things.

--- a/hurumap/templates/blocks/showcase.html
+++ b/hurumap/templates/blocks/showcase.html
@@ -1,3 +1,4 @@
+<a name="showcase"></a>
 <div class="showcase {{ extra_css_class }}">
     <div class="container-narrow clearfix centered">
         <h1>Explore our Showcase</h1>
