--- a/hurumap/templates/_base.html
+++ b/hurumap/templates/_base.html
@@ -42,9 +42,9 @@
                 <ul id="site-menu">
                     {% block header_menu %}
                         <li><a href="/about">About</a></li>
-                        <li><a href="/showcase">Showcase</a></li>
-                        <li><a href="/community">Community</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="/#showcase">Showcase</a></li>
+                        <li><a href="https://facebook.com/HacksHackersAfrica" target="_blank" rel="noopener">Community</a></li>
+                        <li><a href="mailto:hello@hurumap.org">Contact</a></li>
                     {% endblock header_menu %}
                 </ul>
 
