Kenya mostly working.

--- a/hurumap/templates/_base.html
+++ b/hurumap/templates/_base.html
@@ -44,7 +44,7 @@
                         <li><a href="/about">About</a></li>
                         <li><a href="/#showcase">Showcase</a></li>
                         <li><a href="https://facebook.com/HacksHackersAfrica" target="_blank" rel="noopener">Community</a></li>
-                        <li><a href="mailto:hello@hurumap.org">Contact</a></li>
+                        <li><a href="mailto:{{ HURUMAP.contact_email }}">Contact</a></li>
                     {% endblock header_menu %}
                 </ul>
 
